# ProjectMarch

./: .flake8  .gitattributes  .gitignore  launch_tool.py  requirements.txt
pointcloud/: CGAL.cpp  CMakeLists.txt  pc.py  point_cloud.cpp
pointcloud/CPP/: CMakeLists.txt  example.hpp
pointcloud/CPP/include/: hull_finder.h  position_finder.h  preprocessor.h  region_creator.h
pointcloud/CPP/include/utilities/: linear_algebra_utilities.h  realsense_to_pcl.hpp
pointcloud/CPP/src/: bla.py  hull_finder.cpp  main.cpp  position_finder.cpp  preprocessor.cpp  region_creator.cpp
ros1/src/bridge/march_dynamic_reconfigure_parameters/: CMakeLists.txt  package.xml  setup.py
ros1/src/bridge/march_dynamic_reconfigure_parameters/scripts/: march_dynamic_reconfigure_parameters_node
ros1/src/control/march_gain_scheduling/: CMakeLists.txt  setup.py
ros1/src/control/march_gain_scheduling/test/: one_step_linear_interpolation_test.py
ros1/src/control/march_roscontrol_pid/: CMakeLists.txt  controller_plugins.xml  package.xml
ros1/src/control/march_roscontrol_pid/include/: pid_roscontrol.hpp
ros1/src/control/march_roscontrol_pid/src/: pid_roscontrol.cpp
ros1/src/control/march_system_identification/: CMakeLists.txt  package.xml  setup.py
ros1/src/control/march_system_identification/launch/: frequency_response_analysis.launch  system_identification.launch
ros1/src/control/march_system_identification/nodes/: frequency_response_analysis  frequency_response_analysis_node
ros1/src/control/march_system_identification/scripts/: march_system_identification
ros1/src/data/march_data_collector/: CMakeLists.txt  setup.py
ros1/src/data/march_data_collector/launch/: march_data_collector.launch
ros1/src/hardware/drivers/march_temperature_sensor_controller/: CMakeLists.txt
ros1/src/hardware/interface/march_hardware_builder/: CMakeLists.txt
ros1/src/shared/march_description/: CMakeLists.txt
ros1/src/shared/march_description/cmake/: march_description-extras.cmake
ros1/src/shared/march_shared_classes/: CMakeLists.txt  setup.py
ros1/src/shared/march_shared_classes/test/: gait_test.py  joint_trajectory_test.py  limits_test.py  run_tests.py  setpoint_test.py  subgait_graph_test.py  subgait_test.py
ros1/src/shared/march_shared_msgs/: CMakeLists.txt
ros1/src/shared/march_shared_msgs/msg/: AfterLimitJointCommand.msg  Alive.msg  CurrentGait.msg  CurrentState.msg  Error.msg  GaitInstruction.msg  GaitInstructionResponse.msg  GaitParameters.msg  HighVoltageNet.msg  JointPIDs.msg  JointValues.msg  LowVoltageNet.msg  MotorControllerState.msg  PID.msg  PowerDistributionBoardState.msg  PressureSole.msg  PressureSoleData.msg  PressureSolesData.msg
ros1/src/shared/march_shared_msgs/srv/: CapturePointPose.srv  ChangeComLevel.srv  ContainsGait.srv  GetGaitParameters.srv  GetMoveItTrajectory.srv  GetParamBool.srv  GetParamString.srv  GetPossibleComLevels.srv  PossibleGaits.srv  SetGaitVersion.srv  SetParamBool.srv
ros1/src/simulation/march_gazebo_plugins/: CMakeLists.txt
ros1/src/simulation/march_gazebo_plugins/src/: com_controller_plugin.cpp  contact_plugin.cpp  obstacle_controller.cpp  walk_controller.cpp
ros1/src/simulation/march_simulation/: CMakeLists.txt
ros1/src/simulation/march_simulation/launch/: march_world.launch
ros2/src/control/march_gain_scheduling/: package.xml  setup.py
ros2/src/control/march_gain_scheduling/launch/: march_gain_scheduling.launch.py  march_gain_scheduling.launch.xml
ros2/src/control/march_gain_scheduling/march_gain_scheduling/: dynamic_pid_reconfigurer.py  gain_scheduling_node.py  one_step_linear_interpolation.py
ros2/src/control/march_gain_scheduling/test/: one_step_linear_interpolation_test.py
ros2/src/foot_position_finder/: CMakeLists.txt
ros2/src/foot_position_finder/include/: region_creator.h
ros2/src/foot_position_finder/include/utilities/: linear_algebra_utilities.h  realsense_to_pcl.hpp
ros2/src/foot_position_finder/src/: foot_position_finder_node.cpp  hull_finder.cpp  position_finder.cpp  preprocessor.cpp  region_creator.cpp
ros2/src/gaits/march_gait_files/: CMakeLists.txt
ros2/src/gaits/march_gait_files/M7_test_joint_linear_ros_gaits/: README  default.yaml
ros2/src/gaits/march_gait_files/M7_test_joint_rotational_ros_gaits/: README  default.yaml
ros2/src/gaits/march_gait_files/airgait_vi/: default.yaml  realsense_gaits.yaml
ros2/src/gaits/march_gait_files/march_vii_gaits/: default.yaml
ros2/src/gaits/march_gait_files/minimal/: default.yaml
ros2/src/gaits/march_gait_files/simulation_only_vi/: default.yaml
ros2/src/gaits/march_gait_files/test_joint_linear_gaits/: default.yaml
ros2/src/gaits/march_gait_files/test_joint_rotational_gaits/: default.yaml
ros2/src/gaits/march_gait_files/test_versions_vi/: default.yaml  realsense_gaits.yaml
ros2/src/safety/march_safety/: CMakeLists.txt
ros2/src/safety/march_safety/launch/: march_safety.launch.py
ros2/src/safety/march_safety/src/: input_device_safety.cpp  safety_handler.cpp  safety_node.cpp  temperature_safety.cpp
ros2/src/safety/march_safety/test/: util.py
ros2/src/shared/march_description/: CMakeLists.txt
ros2/src/shared/march_description/cmake/: march_description-extras.cmake
ros2/src/shared/march_description/launch/: march_description.launch.py
ros2/src/shared/march_description/urdf/: march3.urdf  march4.xacro  march6.xacro  march6_three_cameras.xacro  march7.urdf  march7.xacro  test_joint_linear.xacro  test_joint_rotational.xacro
ros2/src/shared/march_shared_msgs/: CMakeLists.txt
ros2/src/shared/march_shared_msgs/msg/: AfterLimitJointCommand.msg  Alive.msg  CurrentGait.msg  CurrentState.msg  Error.msg  FollowJointTrajectoryActionFeedback.msg  FollowJointTrajectoryActionGoal.msg  FollowJointTrajectoryActionResult.msg  FollowJointTrajectoryFeedback.msg  FollowJointTrajectoryGoal.msg  FollowJointTrajectoryResult.msg  GaitInstruction.msg  GaitInstructionResponse.msg  HighVoltageNet.msg  LowVoltageNet.msg  PID.msg  (+4 more)
ros2/src/simulation/march_gazebo_plugins/: CMakeLists.txt
ros2/src/simulation/march_simulation/: CMakeLists.txt  package.xml
(+2580 files in other folders)
