<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>march_system_identification</name>
    <version>0.0.0</version>
    <description>Implementing functions for performing all kinds of system identification methods</description>
    <maintainer email="software@projectmarch.nl">Project March</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>python3-setuptools</buildtool_depend>

    <depend>control_msgs</depend>
    <depend>march_shared_msgs</depend>
    <depend>std_msgs</depend>>

    <exec_depend>rospy</exec_depend>

</package>
